[gd_scene load_steps=2 format=3 uid="uid://cybfmuy1v407k"]

[ext_resource type="Script" path="res://systems/weather_system/WeatherUI.gd" id="1_07cpo"]

[node name="WeatherControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07cpo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.375
anchor_bottom = 0.177778
offset_bottom = 12.7999
grow_horizontal = 2
grow_vertical = 2

[node name="HumidityContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="HSlider" type="HSlider" parent="VBoxContainer/HumidityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="VBoxContainer/HumidityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HUMIDITY : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoistureContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="HSlider" type="HSlider" parent="VBoxContainer/MoistureContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="VBoxContainer/MoistureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MOISTURE : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeatContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="HSlider" type="HSlider" parent="VBoxContainer/HeatContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
min_value = -100.0

[node name="Label" type="Label" parent="VBoxContainer/HeatContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HEAT : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="HSlider" type="HSlider" parent="VBoxContainer/WindContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
min_value = -100.0

[node name="Label" type="Label" parent="VBoxContainer/WindContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "WIND : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeatherTypeDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/HumidityContainer/HSlider" to="." method="_on_Humidity_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MoistureContainer/HSlider" to="." method="_on_Moisture_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HeatContainer/HSlider" to="." method="_on_Heat_value_changed"]
[connection signal="value_changed" from="VBoxContainer/WindContainer/HSlider" to="." method="_on_Wind_value_changed"]
